--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -3,42 +3,91 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard</title>
-  <link rel="stylesheet" href="css/main.css">
+  <title>Dashboard - Community Job Board</title>
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <h1>Dashboard</h1>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="post-job.html">Post Job</a></li>
-        <li><a href="login.html" id="logout">Logout</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <section class="form-section">
-    <h2>Post a New Job</h2>
-    <form id="postJobForm">
-      <input type="text" id="title" placeholder="Job Title" required>
-      <input type="text" id="location" placeholder="Location" required>
-      <select id="category" required>
-        <option value="">Select Category</option>
-        <option>IT</option>
-        <option>Education</option>
-        <option>Retail</option>
-      </select>
-      <textarea id="description" placeholder="Job Description" required></textarea>
-      <button type="submit">Post Job</button>
-    </form>
+<header>
+  <h1>Community Job Board</h1>
+  <button id="logoutBtn" class="dark-mode-toggle">Logout</button>
+</header>
+
+<main class="container">
+  <h2 id="welcomeMsg">Welcome!</h2>
+
+  <p>This is your dashboard. You can view job listings, apply for jobs, or manage your profile.</p>
+
+  <!-- Example: Job Listings -->
+  <section class="job-listings" id="jobListings">
+    <!-- Jobs will be dynamically inserted here -->
   </section>
+</main>
 
-  <section class="job-list">
-    <h2>Your Posted Jobs</h2>
-    <div id="job-container"></div>
-  </section>
+<!-- Floating Dark Mode Toggle -->
+<button id="darkModeToggle" title="Toggle dark mode">🌙</button>
 
-  <script src="js/dashboard.js"></script>
+<script src="../js/auth.js"></script>
+<script>
+// ---------------------------
+// Dashboard Logic
+// ---------------------------
+
+// Check if user is logged in
+const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+if (!currentUser) {
+  alert("Please login first!");
+  window.location.href = "login.html";
+} else {
+  document.getElementById("welcomeMsg").textContent = `Welcome, ${currentUser.name}!`;
+}
+
+// Logout button
+document.getElementById("logoutBtn").addEventListener("click", () => {
+  localStorage.removeItem("currentUser");
+  alert("You have been logged out.");
+  window.location.href = "login.html";
+});
+
+// Example: Display some dummy job listings
+const jobs = [
+  { title: "Front-end Developer", company: "Local Startup", location: "Windhoek", status: "Open" },
+  { title: "Volunteer Coordinator", company: "NGO Namibia", location: "Swakopmund", status: "Open" },
+  { title: "Cashier", company: "Local Shop", location: "Windhoek", status: "Closed" }
+];
+
+const jobContainer = document.getElementById("jobListings");
+jobs.forEach(job => {
+  const jobCard = document.createElement("div");
+  jobCard.className = "job-card";
+  jobCard.innerHTML = `
+    <h3>${job.title}</h3>
+    <p><strong>Company:</strong> ${job.company}</p>
+    <p><strong>Location:</strong> ${job.location}</p>
+    <p><strong>Status:</strong> ${job.status}</p>
+    <button>Apply</button>
+  `;
+  jobContainer.appendChild(jobCard);
+});
+
+// ---------------------------
+// Dark Mode Floating Toggle
+// ---------------------------
+document.addEventListener("DOMContentLoaded", () => {
+  const toggleBtn = document.getElementById("darkModeToggle");
+
+  if (localStorage.getItem("darkMode") === "enabled") {
+    document.body.classList.add("dark-mode");
+    toggleBtn.textContent = "☀️";
+  }
+
+  toggleBtn.addEventListener("click", () => {
+    document.body.classList.toggle("dark-mode");
+    const isDark = document.body.classList.contains("dark-mode");
+    localStorage.setItem("darkMode", isDark ? "enabled" : "disabled");
+    toggleBtn.textContent = isDark ? "☀️" : "🌙";
+  });
+});
+</script>
 </body>
 </html>
