--- a/html/login.html
+++ b/html/login.html
@@ -3,20 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="css/main.css">
+  <title>Login - Community Job Board</title>
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <section class="form-section">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="register.html">Register</a></p>
-  </section>
 
-  <script src="js/auth.js"></script>
+<header>
+  <h1>Community Job Board</h1>
+</header>
+
+<main class="container">
+  <h2>Login</h2>
+  <form id="loginForm">
+    <label for="email">Email</label>
+    <input type="email" id="email" required>
+
+    <label for="password">Password</label>
+    <input type="password" id="password" required>
+
+    <button type="submit">Login</button>
+  </form>
+
+  <p>Don't have an account? <a href="register.html">Register here</a></p>
+</main>
+
+<script src="../js/auth.js"></script>
 </body>
 </html>
