--- a/html/register.html
+++ b/html/register.html
@@ -3,25 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register</title>
-  <link rel="stylesheet" href="css/main.css">
+  <title>Register - Community Job Board</title>
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <section class="form-section">
-    <h2>Register</h2>
-    <form id="registerForm">
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <select id="role">
-        <option value="jobseeker">Job Seeker</option>
-        <option value="employer">Employer</option>
-      </select>
-      <button type="submit">Register</button>
-    </form>
-    <p>Already have an account? <a href="login.html">Login</a></p>
-  </section>
 
-  <script src="js/auth.js"></script>
+<header>
+  <h1>Community Job Board</h1>
+</header>
+
+<main class="container">
+  <h2>Register</h2>
+  <form id="registerForm">
+    <label for="name">Full Name</label>
+    <input type="text" id="name" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" required>
+
+    <label for="password">Password</label>
+    <input type="password" id="password" required>
+
+    <button type="submit">Register</button>
+  </form>
+
+  <p>Already have an account? <a href="login.html">Login here</a></p>
+</main>
+
+<script src="../js/auth.js"></script>
 </body>
 </html>
