--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Community Job Board</title>
   <link rel="stylesheet" href="../css/main.css">
+  <form action="submit.php" method="POST">
 </head>
 <body>
   <header>
